--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,7 @@
+html {
+    height: 25%; 
+    width: 25%; 
+}
 body {
     font-family: Arial;
 }
@@ -53,7 +57,7 @@ h3 {
     padding: 3px;
     font-family: monospace;
     font-size: 17px;
-    background-color: lightblue; 
+    background-color: orange; 
     border-radius: 15px; 
 }
 
